<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollViewDetailTraining"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activityNameTraining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_name_training"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activityDateTraining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/place_date" />

            <org.osmdroid.views.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/activityDescriptionTraining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/description_training" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:stretchColumns="0,1">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/title_distance_with_unit"
                        android:textColor="@color/green"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/title_time_whit_unit"
                        android:textColor="@color/green"
                        android:textStyle="bold" />

                </TableRow>


                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/activityDistanceTraining"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/distance_number"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/activityTimeTraining"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/time_number"
                        android:textColor="@color/black" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="@color/grey_dark" />

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/average_velocity"
                        android:textColor="@color/green"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/elevation"
                        android:textColor="@color/green"
                        android:textStyle="bold" />


                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/activityVelAverageTraining"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/velocity_number"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/activityElevationTraining"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/velocity_number"
                        android:textColor="@color/black" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="@color/grey_dark" />

                <TableRow>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_equipment"
                        android:textColor="@color/green"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/activityEquipmentTraining"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_equipment"
                        android:textColor="@color/black" />
                </TableRow>


            </TableLayout>

            <Button
                android:id="@+id/shareTraining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="70dp"
                android:text="@string/share_training"
                android:drawableLeft="@drawable/ic_share_black_24dp" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>